@@ -1,8 +1,31 @@
 """Easy install Tests
 """
+import sys
 import os, shutil, tempfile, unittest
-from setuptools.command.easy_install import easy_install
+from setuptools.command.easy_install import easy_install, get_script_args
 from setuptools.dist import Distribution
+
+class FakeDist(object):
+    def get_entry_map(self, group):
+        if group != 'console_scripts':
+            return {}
+        return {'name': 'ep'}
+
+    def as_requirement(self):
+        return 'spec'
+
+WANTED = """\
+#!%s
+# EASY-INSTALL-ENTRY-SCRIPT: 'spec','console_scripts','name'
+__requires__ = 'spec'
+import sys
+from pkg_resources import load_entry_point
+
+if __name__ == '__main__':
+    sys.exit(
+        load_entry_point('spec', 'console_scripts', 'name')()
+    )
+""" % sys.executable
 
 class TestEasyInstallTest(unittest.TestCase):
 
@@ -17,4 +40,15 @@ class TestEasyInstallTest(unittest.TestCase):
             self.assert_(os.path.exists(sitepy))
         finally:
             shutil.rmtree(cmd.install_dir)
+
+    def test_get_script_args(self):
+        dist = FakeDist()
+
+        old_platform = sys.platform
+        try:
+            name, script = get_script_args(dist).next()
+        finally:
+            sys.platform = old_platform
+
+        self.assertEquals(script, WANTED)
 
