@@ -6,6 +6,8 @@ CHANGES
 0.6.7
 -----
 
+* Issue 11: Generated scripts now wrap their call to the script entry point
+  in the standard "if name == 'main'"
 * Added the 'DONT_PATCH_SETUPTOOLS' environment variable, so virtualenv
   can drive an installation that doesn't patch a global setuptools.
 * Reviewed unladen-swallow specific change from
@@ -38,7 +40,7 @@ CHANGES
 * Issue 65: cli.exe and gui.exe are now generated at build time,
   depending on the platform in use.
 
-* Issue 67: Fixed doc typo (PEP 381/382) 
+* Issue 67: Fixed doc typo (PEP 381/382)
 
 * Distribute no longer shadows setuptools if we require a 0.7-series
   setuptools.  And an error is raised when installing a 0.7 setuptools with
@@ -122,7 +124,7 @@ setuptools
   This closes http://bitbucket.org/tarek/distribute/issue/16 and
   http://bitbucket.org/tarek/distribute/issue/18.
 
-* zip_ok is now False by default. This closes 
+* zip_ok is now False by default. This closes
   http://bugs.python.org/setuptools/issue33.
 
 * Fixed invalid URL error catching. http://bugs.python.org/setuptools/issue20.
